# raytracer_project

./: .gitignore  CMakeLists.txt  README.md  glad.c  perf_test.py  performance_metrics_1.csv  performance_metrics_10.csv  performance_metrics_20.csv  performance_metrics_5.csv  raytracer.sln
include/glad/: glad.h
lib/Windows/: glfw3.lib
raytracer/: glad.c  main.cpp  performance_metrics_50.csv  raytracer.vcxproj  raytracer.vcxproj.filters  raytracer_fragment.fs  raytracer_vertex.vs
